
 706.	[bug]		Zones with an explicit "allow-update { none; };"
			were considered dynamic and therefore not reloaded
			on SIGHUP or "rndc reload".

 705.	[port]		Work out resource limit type for use where rlim_t is
			not available. [RT #695]

 704.	[port]		RLIMIT_NOFILE is not available on all platforms.
			[RT #695]

 703.	[port]		sys/select.h is needed on older platforms. [RT #695]

 702.	[func]		If the address 0.0.0.0 is seen in resolv.conf,
			use 127.0.0.1 instead. [RT #693]

 701.	[func]		Root hints are now fully optional.  Class IN
			views use compiled-in hints by default, as
			before.  Non-IN views with no root hints now
			provide authoritative service but not recursion.
			A warning is logged if a view has neither root
			hints nor authoritative data for the root. [RT #696]

 700.	[bug]		$GENERATE range check was wrong. [RT #688]

 699.	[bug]		The lexer mishandled empty quoted strings. [RT #694]

 698.	[bug]		Aborting nsupdate with ^C would lead to several
			race conditions.

 697.	[bug]		nsupdate was not compatible with the undocumented
			BIND 8 behavior of ignoring TTLs in "update delete"
			commands. [RT #693]

 696.	[bug]		lwresd would die with an assertion failure when passed
			a zero-length name.  [RT #692]

 695.	[bug]		If the resolver attempted to query a blackholed or
			bogus server, the resolution would fail immediately.

 694.	[bug]		$GENERATE did not produce the last entry.
			[RT #682, #683]

 693.	[bug]		An empty lwres statement in named.conf caused
			the server to crash while loading.

 692.	[bug]		Deal with systems that have getaddrinfo() but not
			gai_strerror(). [RT #679]

 691.	[bug]		Configuring per-view forwarders caused an assertion
			failure. [RT #675]

 690.	[func]		$GENERATE now supports DNAME. [RT #654]

 689.	[doc]		man pages are now installed. [RT #210]

 688.	[func]		"make tags" now works on systems with the
			"Exuberant Ctags" etags.

 687.	[bug]		Only say we have IPv6, with sufficent functionality,